# esp32-internet-radio

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  TODO  sdkconfig  sdkconfig.defaults
components/buffer/: CMakeLists.txt  buffer.c
components/buffer/include/buffer/: buffer.h
components/http_header_parser/: CMakeLists.txt  http_header_parser.c
components/http_header_parser/include/http_header_parser/: http_header_parser.h
components/http_server/: CMakeLists.txt  http_server.c
components/http_server/include/: http_server.h
components/mad/: CMakeLists.txt  Makefile  align.c  align.h  bit.c  bit.h  config.h  decoder.c  decoder.h  fixed.c  fixed.h  frame.c  frame.h  global.h  huffman.c  huffman.h  layer12.c  layer3.c  layer3.h  mad.h  mpg12  stream.c  stream.h  synth.c  synth.h  synth_stereo.c.unused  timer.c  timer.h  version.c  version.h
components/mad/include/: mad.h
components/player/: CMakeLists.txt  audio_output.c  bits.c  control.c  control_http.c  decoder.c  events.c  interface.c  player.c  playlist.c  source.c
components/player/include/: audio_output.h  bits.h  control.h  control_http.h  decoder.h  events.h  interface.h  player.h  playlist.h  source.h  terminal.h
components/st7789/: st7789.c
components/st7789/include/: st7789.h
doc/: links.txt  nginx.conf  simulator.txt
linux/: CMakeLists.txt  init.c  trace.c
linux/include/: FreeRTOSExtraConfig.h
linux/mad/: CMakeLists.txt
linux/mad/src/: bit.h  config.h  fixed.h  frame.c  huffman.c  huffman.h  layer12.c  stream.c  synth.h  timer.h  version.h
linux/scripts/: trace_to_vcd.py
main/: CMakeLists.txt  Kconfig.projbuild  events.c  init.c  main.c  task_debug.c
main/include/: events.h  init.h  task_debug.h  trace.h
simulator/: CMakeLists.txt  esp_err.c  init.c  startup.c
simulator/freertos/: CMakeLists.txt
simulator/include/: esp_event.h  esp_log.h  esp_wifi.h  freertos  lwipopts.h
simulator/include/freertos/: FreeRTOS.h  StackMacros.h  croutine.h  event_groups.h  list.h  message_buffer.h  mpu_wrappers.h  portable.h  portmacro.h  projdefs.h  queue.h  semphr.h  stack_macros.h  stream_buffer.h  task.h  timers.h
simulator/lwip/: CMakeLists.txt
simulator/lwip/extra/: tapif.c
simulator/mad/: CMakeLists.txt
simulator/mad/src/: bit.c  config.h  decoder.c  decoder.h  fixed.c  frame.c  frame.h  global.h  layer12.h  layer3.c  layer3.h  mad.h  stream.h  synth.c  timer.c  version.c
webinterface/: app.js  index.html  manifest.json  style.css  sw.js  utils.js
